# SimulEval

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: main.yml  publish-to-test-pypi.yml  pypi-publish.yml  testpypi-publish.yml
demo/seamless_server/: .gitignore  README.md  SimulevalAgentDirectory.py  app.py  environment.yml  environment_mac.yml  test.py  test_mult.py
demo/streaming-chrome-extension/: .eslintrc  .gitignore  .prettierrc.json  README.md  manifest.ts  package.json  vite.config.ts
docs/: conf.py  evaluation.md  get_started.md  installation.rst  quick_start.rst  requirements.txt  restful_api.md  server_client.md  timestamps.md
docs/tutorials/: remote_evaluation.rst  speech_to_text.rst
docs/user_guide/: agent.rst  dataloader.rst  evaluator.rst
examples/data/: src_time.txt
examples/demo/: silero_vad.py
examples/dummy/: dummy_waitk_text_agent.py
examples/fairseq/: fairseq_generic_agent.py  simul_trans_agent.py  simul_trans_speech_agent.py  simul_trans_speech_agent_berard.py  simul_trans_text_agent.py
examples/fairseq_speech/: fairseq_generic_speech_agent.py  fairseq_test_transducer_s2t_agent.py  fairseq_test_waitk_s2t_agent.py  fairseq_test_waitk_s2t_tts_agent.py  generic_agent.py  online_s2t_agant.py  readme.md  test_time_waitk_s2t_agent.py  test_time_waitk_s2t_tts_agent.py  test_time_waitk_unity_agent.py  (+2 more)
simuleval/: __init__.py  cli.py  options.py
test/: test_agent.py  test_agent_pipeline.py  test_evaluator.py  test_remote_evaluation.py  test_s2s.py  test_s2t.py
(+142 files in other folders)
